--- a/newpage.html
+++ b/newpage.html
@@ -130,10 +130,10 @@
     <div class="ull">
         <ul class="ulll">
             <div class="lii">
-                <li><a href="main.html">Home</a></li>
-                <li><a href="newpage.html">About</a></li>
-                <li><a href="registration.html">Registration</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="./main.html">Home</a></li>
+                <li><a href="./newpage.html">About</a></li>
+                <li><a href="./registration.html">Registration</a></li>
+                <li><a href="./login.html">Login</a></li>
             </div>
         </ul>
     </div>
